# pkg/api/apimodel/apimodel.gen.go
@@ -40,6 +40,24 @@ type BookProperties struct {
 	OwnerId                ID     `json:"owner_id"`
 }
 
+// Error defines model for Error.
+type Error struct {
+	// Detail A human-readable explanation specific to this occurrence of the problem.
+	Detail *string `json:"detail,omitempty"`
+
+	// Instance A URI reference that identifies the specific occurrence of the problem. It may or may not yield further information if dereferenced.
+	Instance *string `json:"instance,omitempty"`
+
+	// Status The HTTP status code generated by the origin server for this occurrence of the problem.
+	Status int `json:"status"`
+
+	// Title A short, human-readable summary of the problem type.
+	Title string `json:"title"`
+
+	// Type A URI reference that identifies the problem type.
+	Type *string `json:"type,omitempty"`
+}
+
 // ExchangeProperties defines model for ExchangeProperties.
 type ExchangeProperties struct {
 	Cheque      *string            `json:"cheque,omitempty"`
@@ -101,4 +119,17 @@ type SplitProperties struct {
 	ExchangeId            ID             `json:"exchange_id"`
 	Memo                  *string        `json:"memo,omitempty"`
 	Status                ExchangeStatus `json:"status"`
+}
+
+// User defines model for User.
+type User struct {
+	CreatedAt   time.Time `json:"created_at"`
+	DisplayName *string   `json:"display_name,omitempty"`
+	Id          ID        `json:"id"`
+	UpdatedAt   time.Time `json:"updated_at"`
+}
+
+// UserProperties defines model for UserProperties.
+type UserProperties struct {
+	DisplayName *string `json:"display_name,omitempty"`
 }
