# pkg/api/model.openapi.yaml
@@ -1,6 +1,32 @@
 openapi: "3.0.4"
 components:
   schemas:
+    Error:
+      type: object
+      required:
+        - title
+        - status
+      properties:
+        type:
+          type: string
+          format: uri-reference
+          description: A URI reference that identifies the problem type.
+        title:
+          type: string
+          description: A short, human-readable summary of the problem type.
+        status:
+          type: integer
+          description: The HTTP status code generated by the origin server for this occurrence of the problem.
+          minimum: 100
+          maximum: 599
+        detail:
+          type: string
+          description: A human-readable explanation specific to this occurrence of the problem.
+        instance:
+          type: string
+          format: uri-reference
+          description: A URI reference that identifies the specific occurrence of the problem. It may or may not yield further information if dereferenced.
+
     ID:
       type: string
       format: uuid
@@ -123,3 +149,14 @@ components:
           type: string
         status:
           $ref: "#/components/schemas/ExchangeStatus"
+
+    UserProperties:
+      type: object
+      properties:
+        display_name:
+          type: string
+
+    User:
+      allOf:
+        - $ref: "#/components/schemas/ExistingResource"
+        - $ref: "#/components/schemas/UserProperties"
